--- a/Assignment 1.html
+++ b/Assignment 1.html
@@ -4,6 +4,7 @@
 <title> Table tags </title>
 </head>
 <body>
+    <h1> Creating a table using table tags:- </h1>
 <table border="4" width="100%" cellpadding="5" cellspacing="2">
 <caption align="top"> 
     <strong><em>Top models of cars</em></strong> 
